force-app/main/default/objects/Checklist__c/Checklist__c.object-meta.xml
<CustomObject>
    <label>Checklist</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>