force-app/main/default/objects/Checklist__c/fields/Additional_comments_and_feedback__c.field-meta.xml
<CustomField>
    <fullName>Additional_comments_and_feedback__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Additional comments and feedback</label>
    <type>TextArea</type>
</CustomField>