force-app/main/default/objects/Checklist__c/fields/Answer_10__c.field-meta.xml
<CustomField>
    <fullName>Answer_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Answer</label>
    <type>Checkbox</type>
</CustomField>