force-app/main/default/objects/Checklist__c/fields/Authorisation_Valid_Until_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorisation_Valid_Until_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorisation Valid Until Date</label>
    <type>Date</type>
</CustomField>