force-app/main/default/objects/Checklist__c/fields/Comment_31__c.field-meta.xml
<CustomField>
    <fullName>Comment_31__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>