force-app/main/default/objects/Checklist__c/fields/Date_27__c.field-meta.xml
<CustomField>
    <fullName>Date_27__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>Date</type>
</CustomField>