force-app/main/default/objects/Checklist__c/fields/Date_Transaction_Executed__c.field-meta.xml
<CustomField>
    <fullName>Date_Transaction_Executed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Transaction Executed</label>
    <type>Date</type>
</CustomField>