force-app/main/default/objects/Checklist__c/fields/File_Check_Group_Summary__c.field-meta.xml
<CustomField>
    <fullName>File_Check_Group_Summary__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>File Check Group Summary</label>
    <type>TextArea</type>
</CustomField>