force-app/main/default/objects/Checklist__c/fields/File_Checker__c.field-meta.xml
<CustomField>
    <fullName>File_Checker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>File Checker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Form1</relationshipName>
    <type>Lookup</type>
</CustomField>