force-app/main/default/objects/Checklist__c/fields/File_Checklist_Rate__c.field-meta.xml
<CustomField>
    <fullName>File_Checklist_Rate__c</fullName>
    <formula>IF( ISPICKVAL( Risk_Rating__c , &quot;Green&quot;) , 
IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;, 20, 40), 
IF(ISPICKVAL( Risk_Rating__c , &quot;Red&quot;) , 
IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;, 20, 40), 
IF(ISPICKVAL( Risk_Rating__c , &quot;Amber&quot;) , 
IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;, 20, 40),
&quot;&quot;) ) )</formula>
    <label>File Checklist Rate</label>
    <type>Text</type>
</CustomField>