force-app/main/default/objects/Checklist__c/fields/File_Owner_Section__c.field-meta.xml
<CustomField>
    <fullName>File_Owner_Section__c</fullName>
    <defaultValue>&quot;File Owner Section&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>-</label>
    <length>80</length>
    <type>Text</type>
</CustomField>