force-app/main/default/objects/Checklist__c/fields/Logged_In_As_TSM__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_As_TSM__c</fullName>
    <description>Created for reporting purpose</description>
    <formula>IF( Treasury_Solution_Manager__c = $User.Id, 1,0)</formula>
    <label>Logged In As FRSM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>