force-app/main/default/objects/Checklist__c/fields/NA_39__c.field-meta.xml
<CustomField>
    <fullName>NA_39__c</fullName>
    <defaultValue>false</defaultValue>
    <label>N/A</label>
    <type>Checkbox</type>
</CustomField>