force-app/main/default/objects/Checklist__c/fields/Pre_Deal_Call__c.field-meta.xml
<CustomField>
    <fullName>Pre_Deal_Call__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre Deal Call</label>
    <type>Date</type>
</CustomField>