force-app/main/default/objects/Checklist__c/fields/Product_Authorised__c.field-meta.xml
<CustomField>
    <fullName>Product_Authorised__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Product Authorised</label>
    <length>255</length>
    <type>Text</type>
</CustomField>