force-app/main/default/objects/Checklist__c/fields/Question_10__c.field-meta.xml
<CustomField>
    <fullName>Question_10__c</fullName>
    <defaultValue>&quot;Was the Strategy Paper password protected?&quot;</defaultValue>
    <description>Was the Strategy Paper password protected?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Question</label>
    <type>TextArea</type>
</CustomField>