force-app/main/default/objects/Checklist__c/fields/Question_11__c.field-meta.xml
<CustomField>
    <fullName>Question_11__c</fullName>
    <defaultValue>&quot;Along with the Strategy Paper did you provide &amp; attach the following:&quot;</defaultValue>
    <description>Along with the Strategy Paper did you provide &amp; attach the following:</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Question</label>
    <type>TextArea</type>
</CustomField>