force-app/main/default/objects/Checklist__c/fields/Question_12__c.field-meta.xml
<CustomField>
    <fullName>Question_12__c</fullName>
    <defaultValue>&quot;Generic Product Profiles?&quot;</defaultValue>
    <description>Generic Product Profiles?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>1</label>
    <type>TextArea</type>
</CustomField>