force-app/main/default/objects/Checklist__c/fields/Remedial_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Remedial_Action_Required__c</fullName>
    <label>Remedial Action Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>