force-app/main/default/objects/Checklist__c/fields/Review_Comment_12__c.field-meta.xml
<CustomField>
    <fullName>Review_Comment_12__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Comment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>