force-app/main/default/objects/Checklist__c/fields/Reviewed_10__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed</label>
    <type>Checkbox</type>
</CustomField>