force-app/main/default/objects/Checklist__c/fields/Strategy_Paper_Issued__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Paper_Issued__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategy Paper Issued</label>
    <type>Date</type>
</CustomField>