force-app/main/default/objects/Checklist__c/fields/Strategy_Paper_Password__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Paper_Password__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Strategy Paper Password</label>
    <type>TextArea</type>
</CustomField>