force-app/main/default/objects/Checklist__c/fields/Treasury_Solution_Manager__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Solution_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Risk Solutions Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>