force-app/main/default/objects/Checklist__c/fields/TSM_Name__c.field-meta.xml
<CustomField>
    <fullName>TSM_Name__c</fullName>
    <formula>Treasury_Solution_Manager__r.FirstName +&#39; &#39;+Treasury_Solution_Manager__r.LastName</formula>
    <label>FRSM Name</label>
    <type>Text</type>
</CustomField>