force-app/main/default/objects/Checklist__c/fields/User_Summary__c.field-meta.xml
<CustomField>
    <fullName>User_Summary__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Summarise here why the Customer feels that this product makes sense for them and why they say it is more suitable than others?</inlineHelpText>
    <label>User Summary</label>
    <type>TextArea</type>
</CustomField>