force-app/main/default/objects/Checklist__c/recordTypes/Post_Deal_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Post_Deal_Checklist</fullName>
    <active>true</active>
    <label>Post Deal Checklist</label>
</RecordType>