force-app/main/default/objects/Checklist__c/recordTypes/Professional_Optout_Pre_Deal_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Professional_Optout_Pre_Deal_Checklist</fullName>
    <active>true</active>
    <label>Professional (Optout) Pre-Deal Checklist</label>
</RecordType>