force-app/main/default/objects/Checklist__c/recordTypes/Retail_Pre_Deal_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Retail_Pre_Deal_Checklist</fullName>
    <active>true</active>
    <label>Retail Pre-Deal Checklist</label>
</RecordType>