force-app/main/default/objects/Checklist__c/validationRules/CL_Checklist_Status_as_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>CL_Checklist_Status_as_Completed</fullName>
    <active>true</active>
    <description>File Owner is not authorised to use Checklist Status as &quot;Completed&quot;</description>
    <errorConditionFormula>NOT($Permission.ChecklistStatusAdmin ) &amp;&amp;  ISCHANGED( Checklist_Status__c ) &amp;&amp;  (ISPICKVAL( Checklist_Status__c , &quot;Completed&quot;)|| ISPICKVAL( Checklist_Status__c , &quot;Remedial Action Required&quot;) )</errorConditionFormula>
    <errorDisplayField>Checklist_Status__c</errorDisplayField>
    <errorMessage>Only File Check Group can select Completed/Remedial Action Required as Checklist Status</errorMessage>
</ValidationRule>