force-app/main/default/objects/Checklist__c/validationRules/CL_Related_Account_Fields_Missing.validationRule-meta.xml
<ValidationRule>
    <fullName>CL_Related_Account_Fields_Missing</fullName>
    <active>true</active>
    <description>To Validate the related account</description>
    <errorConditionFormula>RecordType.DeveloperName &lt;&gt; &quot;Post_Deal_Checklist&quot; 
&amp;&amp; 

((
Customer_Name__r.RecordType.DeveloperName = &quot;Target&quot; 
&amp;&amp; 
(
ISBLANK( TEXT( Customer_Name__r.Branch__c ) ) || 
ISBLANK( Customer_Name__r.RM_Name__c ) ||
Customer_Name__r.RM_Name__r.RecordType.DeveloperName  &lt;&gt; &quot;Banker&quot; ||
TEXT(Customer_Name__r.Branch__c)  &lt;&gt;  Customer_Name__r.RM_Name__r.Account.Name ||  TEXT(Customer_Name__r.RM_Name__r.Contact_Status__c)  &lt;&gt; &quot;Active&quot; ))

|| 

(Customer_Name__r.RecordType.DeveloperName = &quot;Customer&quot; 
&amp;&amp; 
(ISBLANK( Customer_Name__r.BillingStreet ) ||
 ISBLANK( Customer_Name__r.BillingCity ) ||
 ISBLANK( Customer_Name__r.BillingPostalCode ) ||
 ISBLANK( Customer_Name__r.RM_Name__c ) ||
Customer_Name__r.RM_Name__r.RecordType.DeveloperName  &lt;&gt; &quot;Banker&quot; ||
 TEXT(Customer_Name__r.RM_Name__r.Contact_Status__c)  &lt;&gt; &quot;Active&quot; )))</errorConditionFormula>
    <errorMessage>There are related Customer fields that require completing before this record can be saved. Please revert to the Customer, press Edit and then Save. This will display the mandatory fields that require completing. Then come back to this record to Save</errorMessage>
</ValidationRule>