force-app/main/default/objects/Checklist__c/validationRules/CL_Remedial_Action_Not_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CL_Remedial_Action_Not_Required</fullName>
    <active>true</active>
    <description>validation rule that the Remedial Action Required field should be completed when the risk rating field is not blank.</description>
    <errorConditionFormula>(RecordType.DeveloperName = &quot;Professional_Optout_Pre_Deal_Checklist&quot; || RecordType.DeveloperName = &quot;Professional_Pre_Deal_Checklist&quot; || RecordType.DeveloperName = &quot;Retail_Pre_Deal_Checklist&quot;) &amp;&amp;  ISPICKVAL( Risk_Rating__c , &quot;Green&quot;)&amp;&amp;  ISPICKVAL( Remedial_Action_Required__c, &quot;Yes&quot; )</errorConditionFormula>
    <errorDisplayField>Remedial_Action_Required__c</errorDisplayField>
    <errorMessage>Remedial Action Required must be &quot;No&quot; when the file rating is Green</errorMessage>
</ValidationRule>