force-app/main/default/objects/Checklist__c/validationRules/CL_Status_as_Rem_Action_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>CL_Status_as_Rem_Action_Complete</fullName>
    <active>true</active>
    <description>FCG should not use Remedial Action Complete</description>
    <errorConditionFormula>$Permission.ChecklistStatusAdmin &amp;&amp;  ISCHANGED( Checklist_Status__c ) &amp;&amp; ISPICKVAL( Checklist_Status__c , &quot;Remedial Action Complete&quot;)</errorConditionFormula>
    <errorDisplayField>Checklist_Status__c</errorDisplayField>
    <errorMessage>Only FRSM can use the status as &quot;Remedial Action Complete&quot;</errorMessage>
</ValidationRule>