force-app/main/default/objects/Checklist__c/validationRules/CL_Update_Checklist_status_as_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>CL_Update_Checklist_status_as_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>$Permission.ChecklistStatusAdmin &amp;&amp; ISPICKVAL( Risk_Rating__c , &quot;Green&quot;) &amp;&amp;  NOT(ISPICKVAL( Checklist_Status__c , &quot;Completed&quot;))</errorConditionFormula>
    <errorDisplayField>Checklist_Status__c</errorDisplayField>
    <errorMessage>Update the Checklist status as Completed</errorMessage>
</ValidationRule>