force-app/main/default/objects/Checklist__c/validationRules/CL_Update_CL_status_as_In_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>CL_Update_CL_status_as_In_Progress</fullName>
    <active>true</active>
    <errorConditionFormula>$Permission.ChecklistStatusAdmin &amp;&amp; ( ISPICKVAL( Risk_Rating__c , &quot;Amber&quot;) || ISPICKVAL( Risk_Rating__c , &quot;Red&quot;)) &amp;&amp;  NOT(ISPICKVAL( Checklist_Status__c , &quot;In Progress&quot;))&amp;&amp; NOT(RecordType.DeveloperName = &quot;Post_Deal_Checklist&quot;)</errorConditionFormula>
    <errorDisplayField>Checklist_Status__c</errorDisplayField>
    <errorMessage>Update the Checklist status as In Progress</errorMessage>
</ValidationRule>