force-app/main/default/objects/Checklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Treasury_Solution_Manager__c</columns>
    <columns>File_Checker__c</columns>
    <columns>Risk_Rating__c</columns>
    <columns>Product__c</columns>
    <columns>Customer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>