force-app/main/default/objects/Checklist__c/listViews/IRRM_Professional_Pre_Deal_Checklist.listView-meta.xml
<ListView>
    <fullName>IRRM_Professional_Pre_Deal_Checklist</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>File_Checklist_Rate__c</columns>
    <columns>Product_Authorised__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Checklist__c.Professional_Pre_Deal_Checklist</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>IRRM</value>
    </filters>
    <label>IRRM Professional Pre-Deal Checklist</label>
</ListView>